# llm-wiki-pg

./: .gitignore  LICENSE  README.md  e2e_check.py  knowledge_extractor.py  pyproject.toml  run.py  try_extractor.py
migrations/: rag_v7_schema.sql
src/rag_v7_wiki/: __init__.py  config.py  core.py  protocols.py  query.py  schemas.py
src/rag_v7_wiki/dao/: chunks.py  claims.py  connection.py  documents.py  entities.py  log.py  pages.py  predicates.py
src/rag_v7_wiki/pipeline/: chunking.py  claims.py  contradictions.py  coverage.py  embedding.py  entities.py  indexing.py  linking.py  log.py  predicates.py  quality.py  redact.py  sources.py  synthesis.py
src/rag_v7_wiki/providers/: anthropic_llm.py  openai_embedder.py  openai_llm.py  voyage_embedder.py
tests/: _helpers.py  conftest.py  test_contradictions.py  test_isolation.py  test_log_index.py  test_pipeline.py  test_predicate_normalization.py  test_query.py  test_redact.py
