[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag_v7_wiki"
version = "0.1.0"
description = "LLM Wiki v2 на Postgres + pgvector. Pipeline обработки документов в направления."
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2",
    "anthropic>=0.40",
    "voyageai>=0.3",
    "instructor>=1.6",
    "semantic-text-splitter>=0.18",
    "markdown-it-py>=3",
    "structlog>=24",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_v7_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
